# napari-rsar

./: README.md  requirements.txt  setup.cfg
src/calibration/: tests_estimation_waveform_correction.py  tests_find_global_time_offset.py  tests_spectrum2D.py
src/napari_rsar/: _reader.py  _widget.py  _writer.py  napari.yaml
src/rsar/: files.py
