[metadata]
name = napari-rsar

author = Olivier Lévêque
author_email = olivier.leveque@onera.fr
url = https://github.com/oleveque/napari-rsar
description = A plugin for reading rsar files
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Framework :: napari
project_urls =
    Bug Tracker = https://github.com/oleveque/napari-rsar/issues
    Documentation = https://github.com/oleveque/napari-rsar#README.md
    Source Code = https://github.com/oleveque/napari-rsar
    User Support = https://github.com/oleveque/napari-rsar/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
# add your package requirements here
install_requires =
    napari
    numpy
    scipy
    tomlkit
    pandas
    matplotlib
	
[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-rsar = napari_rsar:napari.yaml